Jan 18 2003 -   Between now and the last entry the following things took
                place:

                Problem with loading DSO on Solaris relating to _muldi3
                fixed.

                A problem fixed related to | .ext syntax.

                An environ issue addressed.

                Filtering by type should now work correctly.

                Publisher's code for dealing with file uploads simplified.

                A windows installer added.

                Install adopted to use distutils.

                A cgihandler problem resulting in double output fixed.

                PyOS_AfterFork() added where needed.

                The binary produced by MSVC no longer needs any MS dll's.

                Filter flush() now cleans memory so large files can be
                processed.

Nov 26 2002 -   3.0.1 is about to be released. This was file has not been
                updated during the 3.0 development because of too many
                things changing.

Nov 28 2001 -	Now compiles against Apache 2.0.28

Nov  6 2001 -	More internal changes. Bugs from previous change, cleaner
		reference keeping.

Nov  1 2001 -	Many internal changes. We no longer use req->notes for things
		that shouldn't be there, handler directives can be restricted
		to specific file extensions thereby allowing multiple handlers
		per directory, etc. The config is now stored in a new hlist
		object, which can be accessed from python via an hlistobject.

Aug 16 2001 -   Mod_python is compiling and running with Apache 2.0 and the
		filter functionality seems to work. There is still a lot of 
		work to be done though.

Aug  4 2001 -   2.7.6 released. Sometime prior a publisher upload bug was 
                fixed.

Jun 11 2001 -	2.7.5 released for those who want Python 2.1

Jun 11 2001 -	Changed configure.in to accomodate Python 2.1. It looks like
		everything else works without any changes.

Jun  4 2001 -	2.7.4 released.
